component("ipfs") {
  sources = [
    "loader.cc",
    "loader_factory.cc",
  ]
  defines = [  ]
  include_dirs = [
    "."
  ]
  deps = [
    "//base",
    "//components/policy/core/common",
    "//services/network:network_service",
    "//services/network/public/cpp:cpp",
    "//net",
  ]
  defines = [ "IS_IPFS_IMPL" ]
}
