component("ipfs") {
  sources = [
    "gateways.cc",
    "interceptor.cc",
    "loader.cc",
    "loader_factory.cc",
  ]
  defines = [  ]
  include_dirs = [
    "."
  ]
  deps = [
    "//base",
    "//components/policy/core/common",
    "//mojo/public/cpp/bindings",
    "//net",
    "//services/network:network_service",
    "//services/network/public/cpp:cpp",
    "//services/network/public/mojom",
    "//url",
  ]
  defines = [ "IS_IPFS_IMPL" ]
}
